--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 HTTP_PORT=8080
 SECRET_KEY=fneinsovkwru3453
 EXPIRE_KEY= '1d'
-MYSQL_HOST=
-MYSQL_USER=
-MYSQL_PASS=
-MYSQL_DB=notes
+MYSQL_HOST=localhost
+MYSQL_USER=root
+MYSQL_PASS=1815Jmcd
+MYSQL_DB=notasdb
 REST_API_ROUTE_BASE_PATH=/api/v1
